@@ -1,3 +1,8 @@
+2006-11-23  Stefan Seefeld  <stefan@codesourcery.com>
+
+	* qmdist/command/install_lib.py: Force recompilation of generated 
+	config.py file.
+
 2006-11-08  Stefan Seefeld  <stefan@codesourcery.com>
 
 	* qm/host.py: Adjust constructor to expect keyword arguments.
